Update YI Health report.html

--- a/YI Health report.html
+++ b/YI Health report.html
@@ -110,8 +110,8 @@
     <ul>
       <li><a href="#page/1">Front Cover</a></li>
       <li><a href="#page/3">YI National Leadership</a></li>
-      <li><a href="#page/6">Message From YUva National Team</a></li>
-      <li><a href="#page/7">Steering Committee</a></li>
+      <li><a href="#page/6">Message From Yuva National Team</a></li>
+      <li><a href="#page/7">About Young Indians</a></li>
       <li><a href="#page/8">Chapter Leadership</a></li>
       <li><a href="#page/9">EC Team</a></li>
       <li><a href="#page/12">Board Members</a></li>
