Update Event - Yi Chennai Annual Day 2024.html

--- a/Event - Yi Chennai Annual Day 2024.html
+++ b/Event - Yi Chennai Annual Day 2024.html
@@ -253,7 +253,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Yi Annual day 2024/Yi Annual day pic 6.jpg" alt="">
+                                <img src="assets/images/Events/Yi Annual day 2024/Yi Annual day pic 6.png" alt="">
                             </div>
                             
                         </div>
@@ -261,7 +261,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Yi Annual day 2024/Yi Annual day pic 7.JPG" alt="">
+                                <img src="assets/images/Events/Yi Annual day 2024/Yi Annual day pic 6.png" alt="">
                             </div>
                             
                         </div>
