--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -189,7 +189,7 @@
                         <div class="col-lg-6">
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
-                                    <h3 class="title">Yi Health Report 2024</h3>
+                                    <h3 class="title">Future 4.0 Advocacy Documents 2024 - Health </h3>
                                     <p class="position">2024</p>
                                     <p align="justify">The members of Yi Yuva REC played a pivotal role in crafting the "Future 4.0 National Advocacy Documents" as a synopsis of the Health Vertical, which aimed at driving impactful change in society. These documents were presented to the special invitees and esteemed Yi dignitaries on 14th September 2024. The dignitaries included Dr. Dheepak Selvaraj, Associate Director of CMC Vellore; Dr. Devamani Pandian, HOD of Reproductive Medicine and Laparoscopic Surgery at the Narayani Group; Thiagarajan T, Joint Chair of the Yuva National Team; Vishal Mehta, Regional Chair of SRTN; Nitin Bothra, Chair of the Road Safety National Team; Mr. Naiju, Director of VIT Vellore; Gomathi Srikalyan, Regional Mentor for Health in SRTN; and Dinesh Agarwal, Regional Mentor for Road Safety in SRTN.  
 
@@ -222,7 +222,7 @@ With the exceptional guidance of Mr. Pradeep Chandramohan, Regional Mentor of Yi
                         <div class="col-lg-6">
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
-                                    <h3 class="title">Yi Road Safety 2024</h3>
+                                    <h3 class="title">Future 4.0 Advocacy Documents 2024 - Road Safetyh3>
                                     <p class="position">2024</p>
                                     <p align="justify">The members of Yi Yuva REC played a pivotal role in crafting the "Future 4.0 National Advocacy Documents" which serves as a synopsis of the Road Safety Vertical, aimed at driving impactful change in society. These documents were presented to the special invitees and esteemed Yi dignitaries on 14th September 2024. The dignitaries included Dr. Dheepak Selvaraj, Associate Director of CMC Vellore; Dr. Devamani Pandian, HOD of Reproductive Medicine and Laparoscopic Surgery at the Narayani Group; Thiagarajan T, Joint Chair of the Yuva National Team; Vishal Mehta, Regional Chair of SRTN; Nitin Bothra, Chair of the Road Safety National Team; Mr. Naiju, Director of VIT Vellore; Gomathi Srikalyan, Regional Mentor for Health in SRTN; and Dinesh Agarwal, Regional Mentor for Road Safety in SRTN.  
 
