Update Achievements and recognitions.html

--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -226,9 +226,7 @@ With the exceptional guidance of Mr. Pradeep Chandramohan, Regional Mentor of Yi
                                     <p class="position">2024</p>
                                     <p align="justify">The members of Yi Yuva REC played a pivotal role in crafting the "Future 4.0 National Advocacy Documents" which serves as a synopsis of the Road Safety Vertical, aimed at driving impactful change in society. These documents were presented to the special invitees and esteemed Yi dignitaries on 14th September 2024. The dignitaries included Dr. Dheepak Selvaraj, Associate Director of CMC Vellore; Dr. Devamani Pandian, HOD of Reproductive Medicine and Laparoscopic Surgery at the Narayani Group; Thiagarajan T, Joint Chair of the Yuva National Team; Vishal Mehta, Regional Chair of SRTN; Nitin Bothra, Chair of the Road Safety National Team; Mr. Naiju, Director of VIT Vellore; Gomathi Srikalyan, Regional Mentor for Health in SRTN; and Dinesh Agarwal, Regional Mentor for Road Safety in SRTN.  
 
-Under the guidance of Mr. Pradeep Chandramohan, Regional Mentor of Yi Yuva SRTN, Abraham Samuel, Rishi Karthick and Thrisha M worked closely on designing the document. Their collective effort ensured a meticulous and impactful presentation, reflecting a perfect blend of creativity and dedication. We extend our heartfelt gratitude to Yi Chennai for providing us with this incredible opportunity to contribute to such meaningful initiatives and for guiding us throughout this journey.
-
-</p>                                    
+Under the guidance of Mr. Pradeep Chandramohan, Regional Mentor of Yi Yuva SRTN, Abraham Samuel, Rishi Karthick and Thrisha M worked closely on designing the document. Their collective effort ensured a meticulous and impactful presentation, reflecting a perfect blend of creativity and dedication. We extend our heartfelt gratitude to Yi Chennai for providing us with this incredible opportunity to contribute to such meaningful initiatives and for guiding us throughout this journey.</p>                                    
                                 </div>
                             </div>
                         </div>
