Update Achievements and recognitions.html

--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -211,8 +211,8 @@ With the exceptional guidance of Mr. Pradeep Chandramohan, Regional Mentor of Yi
                     <div class="row align-items-center">
                         <div class="col-lg-6 porfolio-item portfolio-style-one">
                             <div class=" img-holder mb-50 position-relative z-1 wow fadeInLeft">
-                                <img src="assets/images/Achievements/health.png" alt="">
-                                <a href="Future 4.0 Advocacy Documents 2024 - Health .html" class="portfolio-hover">
+                                     <img src="assets/images/Achievements/health.jpg" alt="">
+                                <a href="AnnualReport23.html#page/1" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
