Update YI Health report.html

--- a/YI Health report.html
+++ b/YI Health report.html
@@ -109,7 +109,7 @@
       <nav class="inside">
     <ul>
       <li><a href="#page/1">Front Cover</a></li>
-      <li><a href="#page/3">YI National Leadership</a></li>
+      <li><a href="#page/3"></a></li>
       <li><a href="#page/6">Message From Yuva National Team</a></li>
       <li><a href="#page/7">About Young Indians</a></li>
       <li><a href="#page/8">Chapter Leadership</a></li>
