--- a/Event - CGT 5.0.html
+++ b/Event - CGT 5.0.html
@@ -287,8 +287,8 @@
                                         <img src="assets/images/portfolio/yuvaneta'24 cover pic.png" alt=""></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="Event - Yuvaneta'24.html">Yuvaneta'24</a></h4>
-                                        <p>October 2024</p>
+                                        <h4><a href="Event-Eco Fest.html">Yuvaneta'24</a></h4>
+                                        <p>September 2024</p>
                                     </div>
                                 </div>
                             </div>
