--- a/Event-Eco Fest.html
+++ b/Event-Eco Fest.html
@@ -337,8 +337,8 @@
                                         <img src="assets/images/portfolio/planting smiles cover pic.png" alt=""></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="Event - Planting smiles.html">Planting Smiles</a></h4>
-                                        <p>November 2024 >
+                                        <h4><a href="Event - Yuvaneta'24.html">Yuvaneta'24</a></h4>
+                                        <p>October 2024</p>
                                     </div>
                                 </div>
                             </div>
@@ -354,8 +354,8 @@
                                         <img src="assets/images/portfolio/Eco arcade.png" alt="Img"></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="Event - Eco Arcade.html">Eco Arcade</a></h4>
-                                        <p>October 2024</p>
+                                        <h4><a href="Event - CGT 5.0.html">Chennai Got talented 5.0</a></h4>
+                                        <p>August 2024</p>
                                     </div>
                                 </div>
                             </div>
