--- a/reg.html
+++ b/reg.html
@@ -133,7 +133,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section-title text-center mb-55 wow fadeInUp" id="register">
-                            <h3>Membership Drive 2024-25</h3>
+                            <h3>Membership Drive 2025</h3>
                             <p class="position">Register Now <b>↓</b></p>
                         </div>
                     </div>
