--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
                     </div>
                 </div>
             </div>
-        </header><!--====== End Header Section ======-->
+        </header>
+        <!--====== End Header Section ======-->
         <!--====== Start Hero Section ======-->
         <section class="hero-banner-v1 position-relative">
             <div class="bg-one"></div>
@@ -177,21 +178,22 @@
                     <div class="col-xl-6 col-lg-6 mt-60 hero-img-two scene"><span data-depth=".5"><img src="assets/images/hero/img-10.png" class="wow fadeInLeft" alt="hero image"></span></div>
                 </div>
             </div>
-        </section><!--====== End Hero Section ======-->
-            <!--======= Start Register Section ======-->
-            <!--section class="cta-area cta-area-v1 pt-60">
+        </section>
+        <!--====== End Hero Section =====-->
+        <!--======= Start Register Section ======-->
+            <section class="cta-area cta-area-v1 pt-60">
                 <div class="container-1450" id="reg">
                     <div class="cta-wrapper dark-blue-bg" >
                         <div class="row mt-50 justify-content-center align-items-center">
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one" id="reg">
                                 <div class="img-holder">
-                                    <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>   <change to assets/images/register.png>
+                                    <img src="assets\images\Registration\Membership(1).png" alt="Img"><a href="assets\images\Registration\Membership(1).png" class="portfolio-hover img-popup"></a>   <change to assets/images/register.png>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6" id="register">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-5">
-                                        <h2><span class="sub-title">Membership Drive 2023 - 24<br><br></span></h2><span class="fill-text"></span>
+                                        <h2><span class="sub-title">Membership Drive 2025<br><br></span></h2><span class="fill-text"></span>
                                         <h2 align="left"><span class="fill-text">Join Us in </span> being the Change <span class="fill-text"> you want to see</span><br><br><span class="fill-text"> Join Us now </span></h2>
                                     </div>
                                     <a href="reg.html#register" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
@@ -201,14 +203,14 @@
                     </div>
                 </div>
             </section>
-            <!--<section class="cta-area cta-area-v1 pt-60">
+            <<section class="cta-area cta-area-v1 pt-60">
                 <div class="container-1450" id="reg">
                     <div class="cta-wrapper dark-blue-bg" >
                         <div class="row mt-50 justify-content-center align-items-center">
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one" id="reg">
                                 <div class="img-holder">
-                                    <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>-->   <!--change to assets/images/register.png-->
-                                <!--/div>
+                                    <img src="assets\images\Registration\Membership(2).png" alt="Img"><a href="assets\images\Registration\Membership(2).png" class="portfolio-hover img-popup"></a>-->   <!--change to assets/images/register.png-->
+                                </div>
                             </div>
                             <div class="col-xl-6 col-lg-6" id="register">
                                 <div class="text-wrapper wow fadeInUp ml-15">
@@ -222,9 +224,7 @@
                         </div>
                     </div>
                 </div>
-            </section-->
-            <!--======= End Register Section ======-->
-        <!--====== Start About Section ======-->
+            </section>
         <section class="about-area about-area-v1 position-relative pt-130">
             <div  class="container">
                 <div class="row align-items-center justify-content-center">
@@ -340,14 +340,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Yi Annual day portfolio.png" alt="Img">
-                                <a href="Event - Yi Chennai Annual Day 2024.html" class="portfolio-hover">
+                                <a href="Event - Yi Annual Day 2024.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Yi Chennai Annual Day 2024.html">Yi Chennai Annual day 2024</a></h3>
+                                <h3 class="title"><a href="Event - Yi Annual Day 2024.html">Yi Chennai Annual day 2024</a></h3>
                                 <a class="cat-link">07/12/2024</a>
                             </div>
                         </div>
@@ -395,7 +395,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Eco Arcade.html">Eco Arcade</a></h3>
+                                <h3 class="title"><a href="Event - Yuvaneta'24.html">Eco Arcade</a></h3>
                                 <a class="cat-link">20/10/2024</a>
                             </div>
                         </div>
@@ -411,7 +411,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Yuvaneta'24.html">Yuvaneta'24</a></h3>
+                                <h3 class="title"><a href="Event - Eco Arcade.html">Yuvaneta'24</a></h3>
                                 <a class="cat-link">03/10/2024</a>
                             </div>
                         </div>
