--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             <div class="col-xl-6 col-lg-6" id="register">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-5">
-                                        <h2><span class="sub-title">Membership Drive 2025<br><br></span></h2><span class="fill-text"></span>
+                                        <h2><span class="sub-title">Membership Drive 2025</span></h2><span class="fill-text"></span>
                                         <h2 align="left"><span class="fill-text">Join Us in </span> being the Change <span class="fill-text"> you want to see</span><br><br><span class="fill-text"> Join Us now </span></h2>
                                     </div>
                                     <a href="reg.html#register" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
@@ -215,7 +215,7 @@
                             <div class="col-xl-6 col-lg-6" id="register">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-5">
-                                        <h2><span class="sub-title">Beyond the Resume<br><br></span></h2>
+                                        <h2><span class="sub-title">Beyond the Resume</span></h2>
                                         <h2 align="left"><span class="fill-text">Elevate your career journey </span> Unlock your potential - <span class="fill-text"> where excellence meets opportunity</span><br><br><span class="fill-text"> Join Us now </span></h2>
                                     </div>
                                     <a href="reg.html#register" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
