--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
                     </div>
                 </div>
             </section>
-            <<section class="cta-area cta-area-v1 pt-60">
+            <!--section class="cta-area cta-area-v1 pt-60">
                 <div class="container-1450" id="reg">
                     <div class="cta-wrapper dark-blue-bg" >
                         <div class="row mt-50 justify-content-center align-items-center">
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one" id="reg">
                                 <div class="img-holder">
-                                    <img src="assets\images\Registration\Membership(2).png" alt="Img"><a href="assets\images\Registration\Membership(2).png" class="portfolio-hover img-popup"></a>-->   <!--change to assets/images/register.png-->
+                                    <img src="" alt="Img"><a href="" class="portfolio-hover img-popup"></a>-->   <!--change to assets/images/register.png>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6" id="register">
@@ -224,7 +224,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section-->
         <section class="about-area about-area-v1 position-relative pt-130">
             <div  class="container">
                 <div class="row align-items-center justify-content-center">
