--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -169,7 +169,7 @@
         </section>
         <!--====== End Page-banner section ======-->
         <!--====== Start Team Details Section ======-->
-        <section class="team-details-section pt-50 pb-90 position-relative z-1">
+        <!--section class="team-details-section pt-50 pb-90 position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-8.png" alt=""></span></div>
             <div class="container">
@@ -201,8 +201,8 @@ With the exceptional guidance of Mr. Pradeep Chandramohan, Regional Mentor of Yi
                     </div>
                 </div>
             </div>
-        </section>
-        <section class="team-details-section pt-50 pb-90 position-relative z-1">
+    </section-->
+        <!--section class="team-details-section pt-50 pb-90 position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-8.png" alt=""></span></div>
             <div class="container">
@@ -235,7 +235,7 @@ With the exceptional guidance of Mr. Pradeep Chandramohan, Regional Mentor of Yi
                     </div>
                 </div>
             </div>
-        </section>
+        </section-->
         
         <section class="team-details-section pt-50 pb-90 position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
