--- a/index.html
+++ b/index.html
@@ -336,22 +336,22 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-8">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Yi Annual day portfolio.png" alt="Img">
-                                <a href="Event - Yi Annual Day 2024.html" class="portfolio-hover">
+                                <a href="Event - Yi Chennai Annual Day 2024.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Yi Annual Day 2024.html">Yi Chennai Annual day 2024</a></h3>
+                                <h3 class="title"><a href="Event - Yi Chennai Annual Day 2024.html">Yi Chennai Annual Day 2024</a></h3>
                                 <a class="cat-link">07/12/2024</a>
                             </div>
                         </div>
-                    </div>
+                   </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
