--- a/Initiatives.html
+++ b/Initiatives.html
@@ -164,7 +164,7 @@
                     </div>
                 </div>
                  <div class="row portfolio-grid">
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-8">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-10">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Akshayapatra4.0.png" alt="Img">
@@ -180,7 +180,7 @@
                             </div>
                         </div>
                    </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-8">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column ">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Yi Annual day portfolio.png" alt="Img">
@@ -196,7 +196,7 @@
                             </div>
                         </div>
                    </div>
-                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-8">
+                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-3">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/planting smiles cover pic.png" alt="Img">
@@ -213,7 +213,7 @@
                         </div>
                    </div>
                     
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-3">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Eco arcade.png" alt="Img">
@@ -245,7 +245,7 @@
                             </div>
                         </div>
                     </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-3">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/eco fest cover pic.png" alt="Img">
@@ -277,7 +277,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-8">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Walk Along 2.0(1).png" alt="Img">
@@ -309,8 +309,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-7 cat-11">
-                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".50s">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-11">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/yuva olympics.png" alt="Img">
                                 <a href="Event - Yuva Olympics.html" class="portfolio-hover">
