--- a/Initiatives.html
+++ b/Initiatives.html
@@ -224,7 +224,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Yuvaneta'24.html">Eco Arcade</a></h3>
+                                <h3 class="title"><a href="Event - Eco Arcade.html">Eco Arcade</a></h3>
                                 <a class="cat-link">20/10/2024</a>
                             </div>
                         </div>
@@ -240,7 +240,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Eco Arcade.html">Yuvaneta'24</a></h3>
+                                <h3 class="title"><a href="Event - Yuvaneta'24.html">Yuvaneta'24</a></h3>
                                 <a class="cat-link">03/10/2024</a>
                             </div>
                         </div>
