--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
                         </div>
                     </div>
                 </div>
-                 <div class="row portfolio-grid">
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-8">
+                <div class="row portfolio-grid">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-10">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Akshayapatra4.0.png" alt="Img">
@@ -335,8 +335,8 @@
                                 <a class="cat-link">08/12/2024</a>
                             </div>
                         </div>
-                    </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-8">
+                   </div>
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column ">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Yi Annual day portfolio.png" alt="Img">
@@ -352,7 +352,7 @@
                             </div>
                         </div>
                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
+                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-3">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/planting smiles cover pic.png" alt="Img">
@@ -367,24 +367,9 @@
                                 <a class="cat-link">11/11/2024</a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
-                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
-                            <div class="img-holder">
-                                <img src="assets/images/portfolio/eco fest cover pic.png" alt="Img">
-                                <a href="Event-Eco Fest.html" class="portfolio-hover">
-                                    <div class="hover-content">
-                                        <i class="far fa-external-link"></i>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="text">
-                                <h3 class="title"><a href="Event-Eco Fest.html">Eco Fest</a></h3>
-                                <a class="cat-link">24/09/2024</a>
-                            </div>
-                        </div>
-                    </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
+                   </div>
+                    
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-3">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Eco arcade.png" alt="Img">
@@ -395,7 +380,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Yuvaneta'24.html">Eco Arcade</a></h3>
+                                <h3 class="title"><a href="Event - Eco Arcade.html">Eco Arcade</a></h3>
                                 <a class="cat-link">20/10/2024</a>
                             </div>
                         </div>
@@ -411,8 +396,24 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Eco Arcade.html">Yuvaneta'24</a></h3>
+                                <h3 class="title"><a href="Event - Yuvaneta'24.html">Yuvaneta'24</a></h3>
                                 <a class="cat-link">03/10/2024</a>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-3">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/eco fest cover pic.png" alt="Img">
+                                <a href="Event-Eco Fest.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event-Eco Fest.html">Eco Fest</a></h3>
+                                <a class="cat-link">24/09/2024</a>
                             </div>
                         </div>
                     </div>
@@ -427,12 +428,12 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - CGT 5.0.html">Chennai Got Talent 5.0</a></h3>
+                                <h3 class="title"><a href="Event - CGT 5.0.html">CGT 5.0</a></h3>
                                 <a class="cat-link">18/08/2024</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-8">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Walk Along 2.0(1).png" alt="Img">
@@ -459,13 +460,13 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - CGT REC.html">CGT @ REC</a></h3>
+                                <h3 class="title"><a href="Event - CGT REC.html">CGT 5.0 REC</a></h3>
                                 <a class="cat-link">25/07/2024</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-7 cat-11">
-                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".50s">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-11">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/yuva olympics.png" alt="Img">
                                 <a href="Event - Yuva Olympics.html" class="portfolio-hover">
