--- a/Initiatives.html
+++ b/Initiatives.html
@@ -180,7 +180,7 @@
                             </div>
                         </div>
                    </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column ">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Yi Annual day portfolio.png" alt="Img">
@@ -229,7 +229,7 @@
                             </div>
                         </div>
                     </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/yuvaneta'24 cover pic.png" alt="Img">
