Update Event - Planting smiles.html

--- a/Event - Planting smiles.html
+++ b/Event - Planting smiles.html
@@ -360,7 +360,7 @@
                                         <img src="assets/images/portfolio/Eco arcade.png" alt="Img"></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="">Eco Arcade</a></h4>
+                                        <h4><a href="Event - Eco Arcade.html">Eco Arcade</a></h4>
                                         <p>October 2024</p>
                                     </div>
                                 </div>
