--- a/Gallery.html
+++ b/Gallery.html
@@ -43,16 +43,16 @@
             <h5 class="panel-widget-title">Contact Us</h5>
             <ul>
                 <li>
-                    <i class="fal fa-map-marker-alt"></i>Rajalakshmi Engineering College, Rajalakshmi Nagar, Thandalam, Chennai - 602 105.
+                    <i class="fal fa-map-marker-alt"></i>Rajalakshmi Engineering College, Rajalakshmi Nagar Thandalam, Chennai - 602 105.
                 </li>
                 <li>
                     <i class="fal fa-envelope-open"></i>
                     <a href="mailto:yiyuva2019@gmail.com">yiyuva2019@gmail.com</a>
                     <a href="mailto:yuva@rajalakshmi.edu.in">yuva@rajalakshmi.edu.in</a>
                 </li>
-                <li><i class="fal fa-phone"></i>
-                            <a href="tel: 9841937389">Linghesh B - 9841937389</a>
-                            <a href="tel: 9894376855">Nandhini R - 9894376855</a>
+                <li>
+                    <i class="fal fa-phone"></i>
+                    <a href="tel:8667060010">Richard - 86670 60010</a>
                     
                 </li>
             </ul>
@@ -135,32 +135,24 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Akshayapatra 4.0/Gallery-1.png" alt="">
-                                <a href="assets/images/Events/Akshayapatra 4.0/Gallery-1.png" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Yi Annual day 2024/Yi Annual day pic 5.jpg" alt="">
+                                <a href="assets/images/Events/Yi Annual day 2024/Yi Annual day pic 5.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/CGT 5.0 OUT/gallery-cgt5.0.png" alt="">
-                                <a href="assets/images/Events/CGT 5.0 OUT/gallery-cgt5.0.png" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Planting smiles/planting smiles 1.JPG" alt="">
+                                <a href="assets/images/Events/Planting smiles/planting smiles 1.JPG" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Walk Along 2.0/gallery-walkalong2.0.png" alt="">
-                                <a href="assets/images/Events/Walk Along 2.0/gallery-walkalong2.0.png" class="portfolio-hover img-popup"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
-                            <div class="img-holder">
-                                <img src="assets/images/Events/CGT 5.0/gallery-cgt-rec.png" alt="">
-                                <a href="assets/images/Events/CGT 5.0/gallery-cgt-rec.png" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Eco Arcade/2.jpg" alt="">
+                                <a href="assets/images/Events/Eco Arcade/2.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -563,7 +555,7 @@
                            
                         </div>
                     </div>-->
-                     <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" >
                             <div class="img-holder">
                                 <img src="assets/images/Events/Green Thumbs/9.png" alt="">                                <a href="assets/images/Events/Green Thumbs/9.png" class="portfolio-hover img-popup"></a>
@@ -591,8 +583,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Build And Connect/img 6.png" alt="">
-                                <a href="assets/images/Events/Build And Connect/img 6.png" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Build And Connect/img 6.jpg" alt=""><a href="assets/images/Events/Build And Connect/img 6.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -643,8 +634,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Build And Connect/img 4.png" alt="">
-                                <a href="assets/images/Events/Build And Connect/img 4.png" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Build And Connect/img 4.jpg" alt=""><a href="assets/images/Events/Build And Connect/img 4.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
