--- a/team.html
+++ b/team.html
@@ -875,7 +875,7 @@
                             </div>
                             <div class="text text-center">
                                 <h4><br>Dr. Hemavathy R V</h4>
-                                <p class="position">YUVA REC Nodal Officer</p>
+                                <p class="position">YUVA REC Nodal Officers</p>
                             </div>
                         </div>
                     </div>
