--- a/team.html
+++ b/team.html
@@ -851,7 +851,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section-title text-center mb-55 wow fadeInUp">
-                            <span class="sub-title st-one">Our Esteemed Nodal Officer</span>                       
+                            <span class="sub-title st-one">Our Esteemed Nodal Officers</span>                       
                         </div>
                     </div>
                 </div>
