--- a/about.html
+++ b/about.html
@@ -272,10 +272,10 @@
                     <div class="col-lg-3 col-md-6 col-sm-1200">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/about/img 3.PNG" alt="">
+                                <img src="assets/images/about/img 2.PNG" alt="">
                             </div>
                             <div class="text text-center">
-                                <h4><br>Mr. Srivas Anantharaman</h4>
+                                <h4><br>Mr. Varan Mittal</h4>
                                 <p class="position">Yi Chennai Chair</p>
                             </div>
 
@@ -287,7 +287,7 @@
                                 <img src="assets/images/about/img 2.PNG" alt="">
                             </div>
                             <div class="text text-center">
-                                <h4><br>Mr. Varan Mittal</h4>
+                                <h4><br>Mr. Prashanth C Raju</h4>
                                 <p class="position">Yi Chennai Co Chair</p>
                             </div>
                         </div>
