--- a/about.html
+++ b/about.html
@@ -284,7 +284,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".3s">
                             <div class="img-holder">
-                                <img src="assets/images/about/img 2.PNG" alt="">
+                                <img src="assets/images/about/cochair.png" alt="">
                             </div>
                             <div class="text text-center">
                                 <h4><br>Mr. Prashanth C Raju</h4>
