--- a/about.html
+++ b/about.html
@@ -272,7 +272,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-1200">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/about/img 2.PNG" alt="">
+                                <img src="assets/images/about/chair.png" alt="">
                             </div>
                             <div class="text text-center">
                                 <h4><br>Mr. Varan Mittal</h4>
