--- a/index.html
+++ b/index.html
@@ -1536,7 +1536,7 @@
                                         We wish them a very happy journey in Yuva and learn leaps and bounds through our projects and initiatives, which is going to help them in achieving their desired career and future goal. </h3>
                                     <div style="position:relative" class="author-title">
                                         <h4 style="font-size:2.1vw;line-height:3.9vw">Mr. Pratheep Chandramohan</h4>
-                                        <p style="font-size:1.7vw;line-height:3.4vw" class="position">Immediate Past Chair - Yi Chennai Chapter</p>
+                                        <p style="font-size:1.7vw;line-height:3.4vw" class="position">Mentor - Yi Chennai Chapter</p>
                                     </div>
                                 </div>
                                 <div style="width:3%"><p></p></div>
