--- a/index.html
+++ b/index.html
@@ -320,6 +320,23 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-10">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/Republic Rhythms cover pic (3).png" alt="Img">
+                                <a href="Event - Republic Rhythms.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Republic Rhythms.html">Republic Rhythms</a></h3>
+                                <a class="cat-link">26/01/2025</a>
+                            </div>
+                        </div>
+                   </div>
+                     
                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-10">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
