Update Event - Republic Rhythms.html

--- a/Event - Republic Rhythms.html
+++ b/Event - Republic Rhythms.html
@@ -147,7 +147,7 @@
                                 <div class="text">
                                     <h3 class="title">Republic Rhythms</h3>
                                     <p class="position">26th January 2025</p>
-                                    <p align="justify">Following the huge success of Akshayapatara 3.0, the members of Yi YUVA REC organised "AKSHAYA PATRA 4.0" on December 8th, 2024 creating a lasting impact on society. A donation drive was conducted in the college campus to collect winter essentials such as sweaters, blankets, scarves and ear muffs for three days. With handpicked vegetables and hygienic cleaning, healthy and scrumptious meals were cooked, packed meticulously and served with extra care and kindness by the members of YUVA REC. Those meals were distributed to the underprivileged located in Koyambedu and Padi which benefitted almost 250 people. Subsequently, winter essentials were provided to the homeless alongside the meals, offering much needed support and warmth in the winter season, determining social responsibility and wellness, extending a refreshed hope and commitment towards improving the society. The soulful event Akshayapatra 4.0 was successful on the whole by uniting together through teamwork and zealous passion for helping the people while inspiring upcoming generations to be exemplary.
+                                    <p align="justify">The members of Yi YUVA REC organised an event 'Republic Rhythms' to instil patriotism in our nation's young minds on Republic Day, 26th January 2025, that fostered a stronghold of cherished memories. The day began with a cheerful icebreaker session after which, the lives of freedom fighters were taught and explained to the children by the members. It was then followed by the excitement of creativity that crafted vibrant tricolour masterpieces. A fun quiz session was held, which sparked the enthusiasm among the children, emphasizing their love for the nation. The children further created indelible tricolour handprints on the flag and in the hearts of every member. Each child's smile brightened the day which resonated the spirit of harmony. The event was a heartening success that united all in solidarity while inspiring the upcoming pillars of our country on the legacy of our nation's pride.
                                     </p>
                                 </div>
                             </div>
@@ -181,7 +181,7 @@
                             </div>
                             <div class="text">
                                 <h4>Target Audience</h4>
-                                <p>School Students</p>
+                                <p>Students</p>
                             </div>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                             </div>
                             <div class="text">
                                 <h4>Cause</h4>
-                                <p>Humanitarian aid</p>
+                                <p>To educate the significance of Republic day</p>
                             </div>
                         </div>
                     </div>
