Update Event - Republic Rhythms.html

--- a/Event - Republic Rhythms.html
+++ b/Event - Republic Rhythms.html
@@ -192,7 +192,7 @@
                             </div>
                             <div class="text">
                                 <h4>Cause</h4>
-                                <p>To educate the significance of Republic day</p>
+                                <p>Spreading patriotism among students</p>
                             </div>
                         </div>
                     </div>
