--- a/Gallery.html
+++ b/Gallery.html
@@ -143,8 +143,8 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Yi Annual day 2024/Yi Annual day pic 5.jpg" alt="">
-                                <a href="assets/images/Events/Yi Annual day 2024/Yi Annual day pic 5.jpg" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Yi Annual day 2024/Yi annual day 2024 grp pic.png" alt="">
+                                <a href="assets/images/Events/Yi Annual day 2024/Yi annual day 2024 grp pic.png" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
