--- a/index.html
+++ b/index.html
@@ -1653,9 +1653,9 @@
                         <span class="sub-title st-one">Our Instagram Feed</span>
                     </div>
             </div>
-            <!--<div id="curator-feed-default-feed-layout"></div>
+            <div id="curator-feed-default-feed-layout"></div>
         </div>
-    </div>-->
+    </div>
    <!-- <style>
     * {
       margin: 0;
