--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -169,7 +169,7 @@
         </section>
         <!--====== End Page-banner section ======-->
         <!--====== Start Team Details Section ======-->
-        <!--section class="team-details-section pt-50 pb-90 position-relative z-1">
+<section class="team-details-section pt-50 pb-90 position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-8.png" alt=""></span></div>
             <div class="container">
@@ -178,8 +178,8 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6 porfolio-item portfolio-style-one">
                             <div class=" img-holder mb-50 position-relative z-1 wow fadeInLeft">
-                                <img src="assets/images/Achievements/health.jpg" alt="">
-                                <a href="AnnualReport23.html#page/1" class="portfolio-hover">
+                                <img src="assets/images/Achievements/health.png" alt="">
+                                <a href="FlipBook/samples/basic/index.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
@@ -193,15 +193,15 @@
                                     <p class="position">2024</p>
                                     <p align="justify">The members of Yi Yuva REC played a pivotal role in crafting the "Future 4.0 National Advocacy Documents" as a synopsis of the Health Vertical, which aimed at driving impactful change in society. These documents were presented to the special invitees and esteemed Yi dignitaries on 14th September 2024. The dignitaries included Dr. Dheepak Selvaraj, Associate Director of CMC Vellore; Dr. Devamani Pandian, HOD of Reproductive Medicine and Laparoscopic Surgery at the Narayani Group; Thiagarajan T, Joint Chair of the Yuva National Team; Vishal Mehta, Regional Chair of SRTN; Nitin Bothra, Chair of the Road Safety National Team; Mr. Naiju, Director of VIT Vellore; Gomathi Srikalyan, Regional Mentor for Health in SRTN; and Dinesh Agarwal, Regional Mentor for Road Safety in SRTN.  
 
-With the exceptional guidance of Mr. Pradeep Chandramohan, Regional Mentor of Yi Yuva SRTN, Abraham Samuel, Rishi Karthick and Thrisha M collaborated closely to design the document. Their combined efforts resulted in a well-crafted and impactful presentation, showcasing a seamless blend of creativity and dedication. We sincerely thank Yi Chennai for offering us this remarkable opportunity to contribute to such meaningful initiatives and for their steadfast support throughout this journey.
-</p>                                    
+                                        With the exceptional guidance of Mr. Pradeep Chandramohan, Regional Mentor of Yi Yuva SRTN, Abraham Samuel, Rishi Karthick and Thrisha M collaborated closely to design the document. Their combined efforts resulted in a well-crafted and impactful presentation, showcasing a seamless blend of creativity and dedication. We sincerely thank Yi Chennai for offering us this remarkable opportunity to contribute to such meaningful initiatives and for their steadfast support throughout this journey.
+                                        </p>                                    
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-    </section-->
+        </section>
         <!--section class="team-details-section pt-50 pb-90 position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-8.png" alt=""></span></div>
